--- a/index.html
+++ b/index.html
@@ -259,7 +259,7 @@
             const container = document.getElementById('three-model-container');
             if (container) {
                 const canvas = document.getElementById('three-canvas');
-                const modelPath = '.\images\3Dpoulet.glb'; // Utilisation du chemin "..." pour le GLB
+                const modelPath = '.\images\poulet.glb'; // Utilisation du chemin "..." pour le GLB
 
                 let scene, camera, renderer, model;
 
