--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700;900&display=swap" rel="stylesheet">
     <!-- Inclusion des bibliothèques Three.js -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r128/three.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/three@0.128.0/examples/js/loaders/GLTFLoader.js"></script>
+    <script src="https://cdn.jsdelivr.net/gh/mrdoob/three.js@r128/examples/js/loaders/GLTFLoader.js"></script>
 </head>
 <body>
 
@@ -42,26 +42,27 @@
                 </div>
             </div>
             <div class="hero-image">
-                <img src=".\images\super_poulet_3d.jpg" alt="Personnage principal Super Poulet">
+                <!-- CORRECTION: Utilisation de slashes (/) pour la compatibilité web -->
+                <img src="./images/super_poulet_3d.jpg" alt="Personnage principal Super Poulet">
             </div>
         </div>
         
         <!-- Les 3 skins restent ici pour être dans la Hero Section -->
-        <img src=".\images\super_poulet_pixel_1.png" alt="Personnage Poulet Classique" class="animated-pixel-char char-1">
-        <img src=".\images\super_poulet_pixel_2.png" alt="Personnage Poussin" class="animated-pixel-char char-2">
-        <img src=".\images\super_poulet_pixel_3.png" alt="Personnage Chevalier" class="animated-pixel-char char-3">
+        <img src="./images/super_poulet_pixel_1.png" alt="Personnage Poulet Classique" class="animated-pixel-char char-1">
+        <img src="./images/super_poulet_pixel_2.png" alt="Personnage Poussin" class="animated-pixel-char char-2">
+        <img src="./images/super_poulet_pixel_3.png" alt="Personnage Chevalier" class="animated-pixel-char char-3">
     </section>
 
     <!-- !!! LE RENARD ET LES OEUFS SONT PLACÉS ICI POUR SE DÉPLACER PARTOUT !!! -->
-    <img src=".\images\renard_poursuivant.png" alt="Le Renard Poursuivant" class="animated-pixel-char char-fox">
+    <img src="./images/renard_poursuivant.png" alt="Le Renard Poursuivant" class="animated-pixel-char char-fox">
     
     <!-- SIX OEUFS POINTANT VERS LA MÊME IMAGE -->
-    <img src=".\images\oeuf_super_poulet.png" alt="Oeuf #1" class="animated-egg egg-1">
-    <img src=".\images\oeuf_super_poulet.png" alt="Oeuf #2" class="animated-egg egg-2">
-    <img src=".\images\oeuf_super_poulet.png" alt="Oeuf #3" class="animated-egg egg-3">
-    <img src=".\images\oeuf_super_poulet.png" alt="Oeuf #4" class="animated-egg egg-4">
-    <img src=".\images\oeuf_super_poulet.png" alt="Oeuf #5" class="animated-egg egg-5">
-    <img src=".\images\oeuf_super_poulet.png" alt="Oeuf #6" class="animated-egg egg-6">
+    <img src="./images/oeuf_super_poulet.png" alt="Oeuf #1" class="animated-egg egg-1">
+    <img src="./images/oeuf_super_poulet.png" alt="Oeuf #2" class="animated-egg egg-2">
+    <img src="./images/oeuf_super_poulet.png" alt="Oeuf #3" class="animated-egg egg-3">
+    <img src="./images/oeuf_super_poulet.png" alt="Oeuf #4" class="animated-egg egg-4">
+    <img src="./images/oeuf_super_poulet.png" alt="Oeuf #5" class="animated-egg egg-5">
+    <img src="./images/oeuf_super_poulet.png" alt="Oeuf #6" class="animated-egg egg-6">
     <!-- !!! FIN DU DÉPLACEMENT !!! -->
 
     <main class="container">
@@ -89,7 +90,7 @@
         <section id="console" class="content-section grey-bg">
             <h3 class="section-title">Compatible avec votre console de jeu</h3>
             <div class="console-photo">
-                <img src=".\images\snes_controller.jpg" alt="Manette Super Nintendo">
+                <img src="./images/snes_controller.jpg" alt="Manette Super Nintendo">
                 <p>Retrouvez les sensations classiques de l'âge d'or du jeu vidéo.</p>
             </div>
         </section>
@@ -126,8 +127,8 @@
                 <!-- FENÊTRE 1: TEE-SHIRTS -->
                 <div class="merch-item">
                     <div class="merch-image-slider slider-tee-shirt">
-                        <img src=".\images\teeshirt.png" alt="Tee-shirt modèle 1" class="slider-image">
-                        <img src=".\images\teeshirt2.png" alt="Tee-shirt modèle 2" class="slider-image">
+                        <img src="./images/teeshirt.png" alt="Tee-shirt modèle 1" class="slider-image">
+                        <img src="./images/teeshirt2.png" alt="Tee-shirt modèle 2" class="slider-image">
                     </div>
                     <div class="merch-info">
                         <h4>Tee-Shirts Exclusifs</h4>
@@ -138,10 +139,10 @@
                 <!-- FENÊTRE 2: MUGS (PRIX PROMOTIONNEL) -->
                 <div class="merch-item">
                     <div class="merch-image-slider slider-mug">
-                        <img src=".\images\mugoeuf.png" alt="Mug Oeuf" class="slider-image">
-                        <img src=".\images\mugpoussin.png" alt="Mug Poussin" class="slider-image">
-                        <img src=".\images\mugpoule.png" alt="Mug Poule" class="slider-image">
-                        <img src=".\images\mugrenard.png" alt="Mug Renard" class="slider-image">
+                        <img src="./images/mugoeuf.png" alt="Mug Oeuf" class="slider-image">
+                        <img src="./images/mugpoussin.png" alt="Mug Poussin" class="slider-image">
+                        <img src="./images/mugpoule.png" alt="Mug Poule" class="slider-image">
+                        <img src="./images/mugrenard.png" alt="Mug Renard" class="slider-image">
                     </div>
                     <div class="merch-info">
                         <h4>Mugs Gaming</h4>
@@ -152,8 +153,8 @@
                 <!-- FENÊTRE 3: PULLS -->
                 <div class="merch-item">
                     <div class="merch-image-slider slider-pull">
-                        <img src=".\images\colfemme.png" alt="Pull modèle femme 1" class="slider-image">
-                        <img src=".\images\colfemme2.png" alt="Pull modèle femme 2" class="slider-image">
+                        <img src="./images/colfemme.png" alt="Pull modèle femme 1" class="slider-image">
+                        <img src="./images/colfemme2.png" alt="Pull modèle femme 2" class="slider-image">
                     </div>
                     <div class="merch-info">
                         <h4>Pulls à Col Roulé</h4>
@@ -164,9 +165,9 @@
                 <!-- FENÊTRE 4: POSTERS (Ajout de poster3.png) -->
                 <div class="merch-item">
                     <div class="merch-image-slider slider-poster">
-                        <img src=".\images\poster.png" alt="Poster de jeu 1" class="slider-image">
-                        <img src=".\images\poster2.png" alt="Poster de jeu 2" class="slider-image">
-                        <img src=".\images\poster3.png" alt="Poster de jeu 3" class="slider-image">
+                        <img src="./images/poster.png" alt="Poster de jeu 1" class="slider-image">
+                        <img src="./images/poster2.png" alt="Poster de jeu 2" class="slider-image">
+                        <img src="./images/poster3.png" alt="Poster de jeu 3" class="slider-image">
                     </div>
                     <div class="merch-info">
                         <h4>Posters Collector</h4>
@@ -177,13 +178,13 @@
             </div>
         </section>
 
-        <!-- 4) Biographie de l’équipe (classée par ordre alphabétique) -->
+        <!-- 4) Biographie de l'équipe (classée par ordre alphabétique) -->
         <section id="equipe" class="content-section team-section">
             <h3 class="section-title">L'Équipe de Développement</h3>
             <div class="team-grid">
                 <!-- Membres classés par ordre alphabétique -->
                 <div class="team-member">
-                    <img src=".\images\photo_lilou.png" alt="Photo de Lilou Berger" class="team-photo">
+                    <img src="./images/photo_lilou.png" alt="Photo de Lilou Berger" class="team-photo">
                     <div class="member-details">
                         <h4>Berger Lilou</h4>
                         <p><strong>23 ans, Tours</strong></p>
@@ -191,7 +192,7 @@
                     </div>
                 </div>
                 <div class="team-member">
-                    <img src=".\images\photo_mathis.png" alt="Photo de Mathis Chauvin" class="team-photo">
+                    <img src="./images/photo_mathis.png" alt="Photo de Mathis Chauvin" class="team-photo">
                     <div class="member-details">
                         <h4>Chauvin Mathis</h4>
                         <p><strong>22 ans, Angers</strong></p>
@@ -199,7 +200,7 @@
                     </div>
                 </div>
                 <div class="team-member">
-                    <img src=".\images\photo_martin.png" alt="Photo de Martin Esnault" class="team-photo">
+                    <img src="./images/photo_martin.png" alt="Photo de Martin Esnault" class="team-photo">
                     <div class="member-details">
                         <h4>Esnault Martin</h4>
                         <p><strong>22 ans, Angers</strong></p>
@@ -207,7 +208,7 @@
                     </div>
                 </div>
                 <div class="team-member">
-                    <img src=".\images\photo_teo.png" alt="Photo de Téo Longépé" class="team-photo">
+                    <img src="./images/photo_teo.png" alt="Photo de Téo Longépé" class="team-photo">
                     <div class="member-details">
                         <h4>Longépé Téo</h4>
                         <p><strong>23 ans, Tours</strong></p>
@@ -215,7 +216,7 @@
                     </div>
                 </div>
                 <div class="team-member">
-                    <img src=".\images\photo_maxime.png" alt="Photo de Maxime Moraine" class="team-photo">
+                    <img src="./images/photo_maxime.png" alt="Photo de Maxime Moraine" class="team-photo">
                     <div class="member-details">
                         <h4>Moraine Maxime</h4>
                         <p><strong>22 ans, Angers</strong></p>
@@ -223,7 +224,7 @@
                     </div>
                 </div>
                 <div class="team-member">
-                    <img src=".\images\photo_tony.png" alt="Photo de Tony Roncin" class="team-photo">
+                    <img src="./images/photo_tony.png" alt="Photo de Tony Roncin" class="team-photo">
                     <div class="member-details">
                         <h4>Roncin Tony</h4>
                         <p><strong>22 ans, Tours</strong></p>
@@ -259,7 +260,8 @@
             const container = document.getElementById('three-model-container');
             if (container) {
                 const canvas = document.getElementById('three-canvas');
-                const modelPath = '.\images\poulet.glb'; // Utilisation du chemin "..." pour le GLB
+                // CORRECTION ICI : Utiliser des slashs (/) au lieu de backslashes (\)
+                const modelPath = './images/3Dpoulet.glb'; 
 
                 let scene, camera, renderer, model;
 
@@ -299,8 +301,12 @@
                             scene.add(model);
                         },
                         (xhr) => {
-                            // Progression
-                            console.log(`Chargement du modèle 3D: ${(xhr.loaded / xhr.total * 100).toFixed(0)}%`);
+                            // Progression - Ajout d'une vérification pour xhr.total
+                            if (xhr.total > 0) {
+                                console.log(`Chargement du modèle 3D: ${(xhr.loaded / xhr.total * 100).toFixed(0)}%`);
+                            } else {
+                                console.log(`Chargement du modèle 3D: ${xhr.loaded} octets chargés.`);
+                            }
                         },
                         (error) => {
                             console.error('Erreur lors du chargement du modèle 3D. Vérifiez le chemin et le format du fichier GLB:', error);
