--- a/index.html
+++ b/index.html
@@ -359,7 +359,7 @@
             const containerPoussin = document.getElementById('three-model-container-poussin');
             if (containerPoussin) {
                 const canvasPoussin = document.getElementById('three-canvas-poussin');
-                const modelPathPoussin = './images/poussin.glb'; 
+                const modelPathPoussin = '.\images/poussin.glb'; 
 
                 let scenePoussin, cameraPoussin, rendererPoussin, modelPoussin;
 
